# python-bigquery-dataframes

./: CHANGELOG.md  pyproject.toml
bigframes/: dataframe.py  dtypes.py  nesteddataframe.py
bigframes/core/: __init__.py  blocks.py  nested_context.py  nodes.py  sql.py
bigframes/core/compile/googlesql/: __init__.py
bigframes/core/groupby/: __init__.py
bigframes/core/indexes/: base.py
bigframes/operations/: base.py
bigframes/pandas/: __init__.py
bigframes/session/: __init__.py  clients.py
bigframes/session/_io/: bigquery.py
tests/system/nested/: CAR.md  test_nested.py
tests/system/small/: test_session.py
tests/unit/core/compile/googlesql/: test_query.py
tests/unit/session/: test_session.py
