[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
# "cloudpickle >= 2.0.0",
#     "fsspec >=2023.3.0",
#     "gcsfs >=2023.3.0",
#     "geopandas >=0.12.2",
#     "google-auth >=2.15.0,<3.0dev",
#     "google-cloud-bigtable >=2.24.0",
#     "google-cloud-pubsub >=2.21.4",
#     "google-cloud-bigquery[bqstorage,pandas] >=3.18.0",
#     "google-cloud-functions >=1.12.0",
#     "google-cloud-bigquery-connection >=1.12.0",
#     "google-cloud-iam >=2.12.1",
#     "google-cloud-resource-manager >=1.10.3",
#     "google-cloud-storage >=2.0.0",
#     # Upper bound due to no windows build for 1.1.2
#     "jellyfish >=0.8.9,<1.1.2",
#     "numpy >=1.24.0",
#     "pandas >=1.5.3",
#     "pandas-gbq >=0.26.0",
#     "pyarrow >=10.0.1",
#     "pydata-google-auth >=1.8.2",
#     "requests >=2.27.1",
#     "scikit-learn >=1.2.2",
#     "sqlalchemy >=1.4,<3.0dev",
#     "sqlglot >=23.6.3",
#     "tabulate >=0.9",
#     "ipywidgets >=7.7.1",
#     "humanize >=4.6.0",
#     "matplotlib >=3.7.1",
#     "db-dtypes >=1.4.0",
#     # For vendored ibis-framework.
#     "atpublic>=2.3,<6",
#     "parsy>=2,<3",
#     "python-dateutil>=2.8.2,<3",
#     "pytz>=2022.7",
#     "toolz>=0.11,<2",
#     "typing-extensions>=4.5.0,<5",
#     "rich>=12.4.4,<14"

#---
python = "^3.10"
google-cloud-bigquery = {extras = ["bqstorage", "pandas"], version = "^3.21.0"}
google-cloud-bigquery-storage = "^2.24.0"
google-auth = "^2.29.0"
google-cloud-functions = "^1.16.3"
google-cloud-bigquery-connection = "^1.15.3"
google-cloud-iam = "^2.15.0"
google-cloud-resource-manager = "^1.12.3"
google-cloud-storage = "^2.16.0"
pyarrow = "^15.0.0"
pandas = {version = ">= 1.5.3"}
numpy = "^1.26.4"
#future = "^1.0.0"
ibis-framework = {extras = ["bigquery"], version = ">=9.0.0,<=9.2.0"}
pydata-google-auth = "^1.8.2"
geopandas = "^0.14"
cloudpickle = "^3.0.0"
fsspec = "^2024.3.1"
gcsfs = "^2024.3.1"
pytest = "^8.2.0"
pytest-sugar = "^1.0.0"
requests = "^2.31.0"
scikit-learn = "^1.4.2"
sqlalchemy = "^2.0.29"
sqlglot = {version = ">=23.6.3,<25.2"}
ipywidgets = "^8.1.2"
humanize = "^4.9.0"
matplotlib = "^3.8.4"
tabulate = "^0.9.0"
networkx = "^3.3"
jellyfish = "^0.8.9"
db-dtypes = "^1.4.1"
pandas-gbq = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.7.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core=1.8.2"]
build-backend = "poetry.core.masonry.api"
